--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,8 @@ body {
     background-position: 0 0;
     background-repeat:no-repeat;
     background-color: transparent;
-    background-size:100%
+    background-size:100%;
+    height:100%;
     align-content: center;
 }
 
@@ -112,7 +113,13 @@ body {
     padding-right:25em; 
     display: block;
     color:white;
+    style:none;
 }
+
+# {
+    
+}
+
 
 
 
