added google fonts like to the head. need to create an issues list of things that need working on. going to push this to gh pages and then merge this branch to create a feature/04 like i planned

--- a/css/main.css
+++ b/css/main.css
@@ -114,10 +114,11 @@ body {
     display: block;
     color:white;
     style:none;
+    font-family: 'Cardo', serif ;
 }
 
 # {
-    
+    text-align: center;
 }
 
 
