--- a/css/main.css
+++ b/css/main.css
@@ -99,12 +99,20 @@ textarea {
 
 body {
     background-image: url('https://c2.staticflickr.com/4/3100/2645021719_4ff205c265.jpg');
+	background-size: cover;
+	height: 100vh;
+	width: 100%;
+	background-position-x: 50%;
+	background-position-y: 50%;
+	background-repeat: no-repeat;
+/*
     background-position: 0 0;
     background-repeat:no-repeat;
     background-color: transparent;
     background-size:100%;
     height:100%;
     align-content: center;
+*/
 	
 }
 
