moved the button within the quote div but the button still jumps all over the page. put a display block on the button class and have a position relative on the quote declaration but the button still does not remain static

--- a/css/main.css
+++ b/css/main.css
@@ -130,9 +130,9 @@ cite {
 	margin-top: 10%;
 	background: none;
 /*	text-align: center;*/
-	position: sticky;
-/*	margin-top: 3em;*/
+	display:block;
 	
+/*	margin-top: 3em;*/
 }
 
 /*
