--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ body {
 }
 
 .quote {
-	border: 1px solid;
+/*	border: 1px solid;*/
     z-index:auto;
 	margin-top: 5%;
 	margin-left: 5%;
@@ -118,7 +118,7 @@ body {
     style:none;
     font-family: 'Cardo', serif;
 	position: relative;
-	height: 15em;
+	height: 25em;
 }
 
 /* color citation white */
@@ -128,7 +128,7 @@ cite {
 
 .button{
 	margin-left:5%;
-	margin-top: 10%;
+	margin-top: 15%;
 	background: none;
 /*	text-align: center;*/
 	display:block;
