added more margin top to the quote and changed the button to be read a quote from Eleanor. would like to style the media queries for the quote and the button to be at specific places on the page. on the larger viewport, the quote is pushed down into the middle of the page the margin top on the button and the quote height are directly related and need to be styled accordingly

--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ body {
 .quote {
 /*	border: 1px solid;*/
     z-index:auto;
-	margin-top: 5%;
+	margin-top: 15%;
 	margin-left: 5%;
 	margin-right: 30%;
     display: block;
@@ -128,12 +128,12 @@ cite {
 
 .button{
 /*	margin-left:5%;*/
-	margin-top: 15%;
+	margin-top: 5%;
 	background: none;
 	text-align: center;
+	align-content: center;
 	display:block;
 	
-/*	margin-top: 3em;*/
 }
 
 /*
