trying to get the button to stay on the page in a good place relative to the quote. added margin right 5 percent to get it moved over but that didnt work. added the height of the text box to 25em so the text doesnt overflow on the button

--- a/css/main.css
+++ b/css/main.css
@@ -127,11 +127,11 @@ cite {
 }
 
 .button{
-/*	margin-left:5%;*/
+	margin-right:5%;
 	margin-top: 15%;
 	background: none;
 	text-align: center;
-	align-content: center;
+/*	align-content: center;*/
 	display:block;
 	
 }
