--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ body {
 	margin-left: 5%;
 	margin-right: 30%;
     display: block;
-    color:white;
+    color:black;
 /*    style:none;*/
     font-family: 'Cardo', serif;
 /*	position: relative;*/
@@ -134,29 +134,29 @@ cite {
 /*	align-content: center;*/
 	display:block;
 	opacity:0.6;
-	
+
 }
 
 @media only screen and (min-width: 30em) and (max-width: 48em){
-   
+
 	.quote {
 		height: 15em;
 	}
-	
-	.button { 
+
+	.button {
 		margin-top:5%;
 	}
 }
 
 @media only screen and (min-width: 48em) {
-	
+
 	.quote {
 		margin-top: 5%;
 	}
-	
+
 	.button {
 		margin-top:5%;
-	} 
+	}
 }
 
 
