--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ textarea {
    ========================================================================== */
 
 body {
-    background-image: url('https://c2.staticflickr.com/4/3100/2645021719_4ff205c265.jpg');
+  background-image: url('https://res.cloudinary.com/theyogime/image/upload/v1440793409/IMG_2253_pqbov8.jpg');
 	background-size: cover;
 	height: 100vh;
 	width: 100%;
