moved the container for the quote slider with css and would like to add opacity to it. removed the closing tag from the html item but replaced it. been playing with jquery in order to get the background images to fade into one another instead of jumping from one to the next as it does with the settimeout method. been bulldogging but want the images to transition smoothly

--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,10 @@ body {
 	background-repeat: no-repeat;
 }
 
+.container {
+  position: absolute;
+  top: 5em;
+}
 
 /* color of citation is white */
 cite {
